# voices-of-truth

./: .fuse_hidden0000000400000001  .gitignore  01_B.md  1  ADD_TO_FAVORITES_TUTORIAL.md  AGENTS.md  ANALYSIS.md  ANALYSIS_AND_SOLUTION.md  ANALYSIS_AND_SOLUTION_2.md  ANALYSIS_AND_SOLUTION_3.md  ARCHITECTURAL_ANALYSIS.md  CODE_ORGANIZATION_SUGGESTIONS.md  FIX_GUIDE.md  LIGHT_DARK_THEME_TUTORIAL.md  LOADING_STATE_TUTORIAL.md  PROJECT_FIXES_GUIDE.md  README.md  REFACTOR_SCHOLAR_CARD.md  Rules-hance-p.en.md  SERVER_AND_CLIENT_COMPONENTS.md  SOLUTION.md  SWITCHERS_FIX.md  TRANSLATION_TUTORIAL.md  TUTORIAL.md  TUTORIAL_BUILD_FROM_SCRATCH.md  Todo.md  WARP.md  eslint.config.mjs  fix-type-error.md  fix_hydration_error.md  next-i18next.config.js  next-i18next.config.ts  next.config.ts  opencode.json  p.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-tracker.json  (+7 more)
.cc-backups/: tracker-2026-05-14T19-17-51-799Z.json  tracker-2026-05-14T19-19-46-882Z.json  tracker-2026-05-14T19-19-53-586Z.json  tracker-2026-05-14T19-19-55-795Z.json  tracker-2026-05-14T19-19-58-111Z.json  tracker-2026-05-14T19-20-00-325Z.json  tracker-2026-05-14T19-20-02-569Z.json  tracker-2026-05-14T19-22-44-780Z.json  tracker-2026-05-14T19-46-36-839Z.json  (+72 more)
voices-of-truth-tui/: pyproject.toml  requirements.txt
voices-of-truth-tui/voices_of_truth/: __main__.py  app.py  store.py
voices-of-truth-tui/voices_of_truth/screens/: __init__.py  scholar_grid.py
voices-of-truth-tui/voices_of_truth/widgets/: __init__.py  category_tabs.py  filter_panel.py  scholar_card.py  status_bar.py
(+149 files in other folders)
