[project]
name = "voices-of-truth-tui"
version = "1.0.0"
description = "Textual TUI for Voices of Truth scholar directory"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.95.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
voices-of-truth-tui = "voices_of_truth.__main__:main"